--- a/src/components/EditionsCarousel/EditionsCarousel.module.css
+++ b/src/components/EditionsCarousel/EditionsCarousel.module.css
@@ -15,6 +15,10 @@ h4 {
   text-align: left;
 }
 
+.editionsHeadline {
+  text-align: center;
+}
+
 img {
   cursor: pointer;
 }
